Fix accessibility description for select subscription dialog, AB#2034612, AB#2034610