@@ -19,6 +19,8 @@ import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.UIUtil;
 import com.microsoft.azure.toolkit.ide.common.action.ResourceCommonActionsContributor;
 import com.microsoft.azure.toolkit.intellij.common.TextDocumentListenerAdapter;
+import com.microsoft.azure.toolkit.intellij.common.component.AzureDialogWrapper;
+import com.microsoft.azure.toolkit.intellij.common.component.JTableUtils;
 import com.microsoft.azure.toolkit.lib.Azure;
 import com.microsoft.azure.toolkit.lib.auth.Account;
 import com.microsoft.azure.toolkit.lib.auth.AzureAccount;
@@ -32,8 +34,6 @@ import com.microsoft.azure.toolkit.lib.common.task.AzureTaskManager;
 import com.microsoft.azure.toolkit.lib.common.utils.TailingDebouncer;
 import com.microsoft.azuretools.telemetrywrapper.EventType;
 import com.microsoft.azuretools.telemetrywrapper.EventUtil;
-import com.microsoft.azure.toolkit.intellij.common.component.AzureDialogWrapper;
-import com.microsoft.azure.toolkit.intellij.common.component.JTableUtils;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.Setter;
@@ -43,6 +43,8 @@ import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import javax.accessibility.Accessible;
+import javax.accessibility.AccessibleContext;
 import javax.annotation.Nonnull;
 import javax.swing.*;
 import javax.swing.event.TableModelEvent;
@@ -53,10 +55,15 @@ import java.awt.*;
 import java.awt.event.ActionListener;
 import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
-import java.util.*;
+import java.util.Map;
+import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static com.microsoft.azuretools.telemetry.TelemetryConstants.ACCOUNT;
 import static com.microsoft.azuretools.telemetry.TelemetryConstants.SELECT_SUBSCRIPTIONS;
@@ -139,10 +146,11 @@ public class SubscriptionsDialog extends AzureDialogWrapper implements TableMode
         final List<SimpleSubscription> subs = this.candidates.stream()
             .filter(s -> StringUtils.isBlank(k) || StringUtils.containsIgnoreCase(s.getName(), k) || StringUtils.containsIgnoreCase(s.getId(), k))
             .sorted(Comparator.comparing(SimpleSubscription::isSelected).reversed())
-            .collect(Collectors.toList());
+            .toList();
         for (final SimpleSubscription sd : subs) {
             model.addRow(new Object[]{sd.isSelected(), sd.getName(), sd});
         }
+        refreshAccessibleDescription(0, model.getRowCount());
         if (model.getRowCount() <= 0) {
             table.getEmptyText().setText("No subscriptions");
         }
@@ -162,6 +170,7 @@ public class SubscriptionsDialog extends AzureDialogWrapper implements TableMode
         final long count = ObjectUtils.firstNonNull(this.candidates, Collections.<SimpleSubscription>emptyList()).stream().filter(SimpleSubscription::isSelected).count();
         final String msg = count < 1 ? "No subscription is selected" : count == 1 ? "1 subscription is selected" : count + " subscriptions are selected";
         this.selectionInfo.setText(msg);
+        this.table.getAccessibleContext().setAccessibleDescription(msg);
     }
 
     @Override
@@ -173,6 +182,7 @@ public class SubscriptionsDialog extends AzureDialogWrapper implements TableMode
                 final SimpleSubscription sub = (SimpleSubscription) model.getValueAt(rowIndex, SUBSCRIPTION_COLUMN);
                 sub.setSelected(selected);
             }
+            refreshAccessibleDescription(e.getFirstRow(), e.getLastRow() + 1);
         }
         if (e.getType() == TableModelEvent.UPDATE || e.getType() == TableModelEvent.INSERT) {
             this.updateSelectionInfo.debounce();
@@ -186,13 +196,13 @@ public class SubscriptionsDialog extends AzureDialogWrapper implements TableMode
         searchBox.addDocumentListener((TextDocumentListenerAdapter) this.filter::debounce);
         searchBox.setToolTipText("Subscription ID/name");
         final DefaultTableModel model = new SubscriptionTableModel();
-        model.addColumn("Selected"); // Set the text read by JAWS
+        model.addColumn("Subscription selected status"); // Set the text read by JAWS
         model.addColumn("Subscription name");
         model.addColumn("Subscription ID");
 
         table = new JBTable(model);
         final TableColumn column = table.getColumnModel().getColumn(CHECKBOX_COLUMN);
-        column.setHeaderValue(""); // Don't show title text
+        column.setHeaderValue("Selected"); // Don't show title text
         column.setMinWidth(23);
         column.setMaxWidth(23);
         JTableUtils.enableBatchSelection(table, CHECKBOX_COLUMN);
@@ -234,12 +244,24 @@ public class SubscriptionsDialog extends AzureDialogWrapper implements TableMode
         panelTable = tableToolbarDecorator.createPanel();
     }
 
+    protected void refreshAccessibleDescription(final int startRow, final int endRow) {
+        final DefaultTableModel model = (DefaultTableModel) table.getModel();
+        IntStream.range(startRow, endRow).forEach(row -> Optional.ofNullable(table.getAccessibleContext())
+                .map(AccessibleContext::getAccessibleTable)
+                .map(table -> table.getAccessibleAt(row, 0))
+                .map(Accessible::getAccessibleContext)
+                .ifPresent(context -> {
+                    final boolean selected = (boolean) model.getValueAt(row, CHECKBOX_COLUMN);
+                    context.setAccessibleName(selected ? "Subscription selected" : "Subscription not selected");
+                }));
+    }
+
     @Override
     protected void doOKAction() {
         final long selected = this.candidates.stream().filter(SimpleSubscription::isSelected).count();
         if (this.candidates.size() > 0 && selected == 0) {
             Messages.showMessageDialog(contentPane,"Please select at least one subscription",
-                    "Subscription dialog info", Messages.getInformationIcon());
+                    "Subscription Dialog Info", Messages.getInformationIcon());
             return;
         }
 
